2001-08-18 00:11 GMT+2 Maurilio Longo <maurilio.longo@libero.it>
   * source/rtl/tbrowse.prg
   * source/rtl/tbcolumn.prg
     + Added multi-line column header/footer support to TBrowse

2001-08-17 16:10 UTC-0400 David G. Holm <dholm@jsd-llc.com>

  Update from "Fergus McDonald" <listsub@qvolution.com>:

  * source/rtl/gtstd/gtstd.c
  * tests/gtstdtst.c
    + Added conditional functionality for MS C compiler to use io and
      conio libs to map stdin in the same manner as already implemented
      for unix version (i.e. no blocking). That is, if stdin is coming
      from console, inkey() returns 0 if no key waiting, and if stdin is
      coming from a file, inkey() returns each char of file and then
      always returns 0 once EOF is reached.

2001-08-17 20:15 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *doc/en/compiler.txt
    *source/compiler/hbusage.c
        *updated to keep current state of compiler switches

    *include/hbexprc.c
        *fixed support for "&macro" syntax (macro was not expanded in
        cases: "&macro.&(macro)"

    *include/hbapi.h
    *include/hbexprb.c
    *source/vm/hvm.c
    *source/vm/macro.c
        *optimized support for compile time switches synchronization

    *source/compiler/harbour.y
        *fixed support for #line directive


2001-08-17 15:09 GMT+2 Maurilio Longo <maurilio.longo@libero.it>
   * source/rtl/tbrowse.prg
     ! fixed ::DispCell() cursor positioning (broken with latest changes to
       implement picture handling)
     * changed ::autolite handling
     ! fixed ::GoBottom() method which was not repainting TBrowse correctly if
       available records were less than available rows.

2001-08-16 16:30 UTC-0400 David G. Holm <dholm@jsd-llc.com>

  * source/pp/pptable.c
    + Added a translation for SET EVENTMASK TO <nEventMask>
      to SET(_SET_EVENTMASK,<nEventMask>)

2001-08-14 23:53 GMT+1 Patrick Mast <harbour@PatrickMast.com>
   * contrib/tprepro/tprepro.prg
     * Bug fix in TranslateFile() method
